--- a/css/general.css
+++ b/css/general.css
@@ -7,6 +7,8 @@
   --text-color-light: #e8e7f0;
   --text-color-dark: #141135;
   --text-color-dark-light: #736da7;
+  --background-color: #f9f9fb;
+  --background-color-light: #fdfdfd;
   --open-sans-font: "Open Sans", sans-serif;
   --paprika-font: "Paprika", system-ui;
 }
@@ -95,7 +97,7 @@ a {
   background-color: transparent;
   box-shadow: inset 0 0 0 2px var(--primary-color);
 }
-h1 {
+.heading-primary {
   font-size: 8.2rem;
   font-weight: 700;
   line-height: 1.5;
@@ -103,9 +105,14 @@ h1 {
   text-align: center;
   margin-top: 14.6rem;
 }
-p {
+.heading-secondary {
+  font-size: 4.8rem;
+  font-weight: 700;
   line-height: 1.5;
   margin-bottom: 2rem;
+}
+p {
+  line-height: 1.5;
   text-align: center;
 }
 span {
