--- a/css/general.css
+++ b/css/general.css
@@ -9,6 +9,7 @@
   --text-color-dark-light: #736da7;
   --background-color: #f9f9fb;
   --background-color-light: #fdfdfd;
+  --background-color-lite: #f6f5ff;
   --open-sans-font: "Open Sans", sans-serif;
   --paprika-font: "Paprika", system-ui;
 }
@@ -97,6 +98,27 @@ a {
   background-color: transparent;
   box-shadow: inset 0 0 0 2px var(--primary-color);
 }
+
+.btn--secondary {
+  padding: 1rem 2rem;
+  /* background-color: var(--secondary-color); */
+  color: var(--text-color-dark);
+  border-radius: 100px;
+  background: linear-gradient(
+    to right,
+    transparent 70%,
+    rgba(144, 238, 144, 0.3) 30%
+  );
+  transition: all 0.3s;
+}
+.btn--secondary:hover {
+  background-color: transparent;
+  background: linear-gradient(
+    to right,
+    transparent 70%,
+    rgba(255, 255, 255, 0.3) 30%
+  );
+}
 .heading-primary {
   font-size: 8.2rem;
   font-weight: 700;
@@ -110,6 +132,12 @@ a {
   font-weight: 700;
   line-height: 1.5;
   margin-bottom: 2rem;
+}
+
+.heading-tertiary {
+  font-size: 3.6rem;
+  font-weight: 700;
+  line-height: 1.5;
 }
 p {
   line-height: 1.5;
