--- a/css/styles.css
+++ b/css/styles.css
@@ -229,6 +229,8 @@ header .buttons {
 /*======================================
           Common CSS ‍Start
 =======================================*/
+.cards .card {
+}
 /*======================================
           Common CSS ‍Start
 =======================================*/
