--- a/css/general.css
+++ b/css/general.css
@@ -139,6 +139,11 @@ a {
   font-weight: 700;
   line-height: 1.5;
 }
+.heading-quaternary {
+  font-size: 3rem;
+  font-weight: 700;
+  line-height: 1.5;
+}
 .description {
   font-size: 1.8rem;
   font-family: var(--paprika-font) !important;
