--- a/css/styles.css
+++ b/css/styles.css
@@ -231,19 +231,31 @@ header .buttons {
 =======================================*/
 .section-plan {
   background-color: var(--background-color);
+  padding: 10rem 0;
 }
 .section-plan .cards {
-  max-width: 11.7rem;
+  max-width: 117rem;
   gap: 3rem;
   text-align: center;
+  margin: 0 auto;
 }
 .cards .card {
   background-color: #ffffff;
   border-radius: 20px;
-
+  padding-top: 6rem;
+  padding-bottom: 6rem;
   box-shadow: #6b62c5;
+  transition: all 0.3s;
 }
-
+.cards .card:hover {
+  background-color: #6b62c5;
+  color: var(--background-color-light);
+  box-shadow: 0 0 10px rgba(107, 98, 197, 0.5);
+}
+.cards .card h1 {
+  /* margin-top: 6rem; */
+  margin-bottom: 2.6rem;
+}
 /*======================================
           Common CSS ‍Start
 =======================================*/
