--- a/css/styles.css
+++ b/css/styles.css
@@ -264,6 +264,30 @@ header .buttons {
 =======================================*/
 .section-about-us {
   padding: 10rem 0;
+  background-color: #f8f8ff;
+}
+
+.section-about-us .slider {
+  background-color: #fff;
+  max-width: 108rem;
+  margin: 15.2rem auto 0 auto;
+  padding-bottom: 5.6rem;
+}
+.section-about-us img {
+  border-radius: 50%;
+  position: relative;
+  top: -7.3rem;
+}
+
+.section-about-us .slider .heading-quaternary {
+  margin-top: 4.8rem;
+}
+.section-about-us .slider p:last-child {
+}
+.star-icon {
+  margin-top: -4.5rem;
+  margin-bottom: 3.3rem;
+  color: #ff7628;
 }
 /*======================================
           Common CSS ‍Start
